[gd_scene load_steps=13 format=2]

[ext_resource path="res://ArtAssets/AnimationSheets/JesterBroom.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player_tapjump/Player_tapjump.gd" type="Script" id=3]

[sub_resource type="Animation" id=28]
resource_name = "FallStun_R"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=20]
resource_name = "Fall_L"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=21]
resource_name = "Fall_R"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Stun_L"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17 ]
}

[sub_resource type="Animation" id=29]
resource_name = "Stun_R"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Up_L"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=30]
resource_name = "Up_R"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="CapsuleShape2D" id=25]
radius = 1.4286
height = 12.3028

[sub_resource type="CapsuleShape2D" id=26]
radius = 1.54249
height = 12.4735

[sub_resource type="CapsuleShape2D" id=27]
radius = 6.0
height = 6.0

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FallStun_R = SubResource( 28 )
anims/Fall_L = SubResource( 20 )
anims/Fall_R = SubResource( 21 )
anims/Stun_L = SubResource( 2 )
anims/Stun_R = SubResource( 29 )
anims/Up_L = SubResource( 17 )
anims/Up_R = SubResource( 30 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.21022, -15.977 )
texture = ExtResource( 1 )
hframes = 22
frame = 10

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="player_bounce" type="KinematicBody2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 2

[node name="bounce_shape" type="CollisionShape2D" parent="player_bounce"]
position = Vector2( 0.58, -22 )
rotation = -1.5708
scale = Vector2( 0.88, 1 )
shape = SubResource( 25 )

[node name="player_box" type="CollisionShape2D" parent="."]
position = Vector2( 0.22076, -8.57448 )
rotation = 1.5708
shape = SubResource( 26 )

[node name="ImmuneTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 1, -15 )
scale = Vector2( 1.1, 1 )
shape = SubResource( 27 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
